[gd_scene load_steps=20 format=3 uid="uid://dkmcgnvo3qt6w"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_7s0jn"]
[ext_resource type="PackedScene" uid="uid://jf4w802fbnfi" path="res://scenes/player.tscn" id="2_e1hhm"]
[ext_resource type="Script" path="res://PlayerStaminaBar.gd" id="4_ycv06"]
[ext_resource type="Texture2D" uid="uid://ca0kiclrmwuuh" path="res://icons/lightning.png" id="5_b7ogi"]
[ext_resource type="PackedScene" uid="uid://dmh0qwrj2ogn4" path="res://scenes/ammo_display.tscn" id="7_rn2j2"]
[ext_resource type="PackedScene" uid="uid://dj2y325gskerx" path="res://scenes/equip_display.tscn" id="8_bvquk"]
[ext_resource type="Script" path="res://ReloadingProgressBar.gd" id="9_je6p7"]
[ext_resource type="Script" path="res://PlayerHpBar.gd" id="10_t4aif"]
[ext_resource type="Texture2D" uid="uid://hnfjre6bhxjf" path="res://icons/heart_blur.png" id="11_f71mg"]
[ext_resource type="Script" path="res://Button.gd" id="12_ms33o"]
[ext_resource type="Script" path="res://FullScreenDisplay.gd" id="12_mw385"]
[ext_resource type="Script" path="res://BattleLog.gd" id="13_ewtrl"]
[ext_resource type="PackedScene" uid="uid://d8pbblushwjo" path="res://scenes/stage.tscn" id="14_m2dnx"]
[ext_resource type="Script" path="res://DmgDisplay.gd" id="14_psugj"]
[ext_resource type="PackedScene" uid="uid://1sya7oh3nuf4" path="res://scenes/ParallaxBackground.tscn" id="15_o3xry"]

[sub_resource type="LabelSettings" id="LabelSettings_ebx6x"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_d1v2q"]

[sub_resource type="LabelSettings" id="LabelSettings_6nrgp"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Curve2D" id="Curve2D_fvyma"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1902, 380, 0, 0, 0, 0, 65, 402, 0, 0, 0, 0, 69, 546, 0, 0, 0, 0, 1296, 542, 0, 0, 0, 0, 1288, 383, 0, 0, 0, 0, 3340, 401)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_7s0jn")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = -13.0
offset_right = 1186.0
offset_bottom = 708.0

[node name="Stage" parent="." instance=ExtResource("14_m2dnx")]

[node name="Player" parent="." instance=ExtResource("2_e1hhm")]
position = Vector2(175, 480)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="UI"]
offset_left = 434.0
offset_top = 241.0
offset_right = 706.0
offset_bottom = 303.0
text = "start"
script = ExtResource("12_ms33o")

[node name="BattleLog" type="Node2D" parent="UI"]
position = Vector2(978, 0)
script = ExtResource("13_ewtrl")

[node name="ColorRect" type="ColorRect" parent="UI/BattleLog"]
offset_right = 175.0
offset_bottom = 232.0
color = Color(0.0823529, 0.0823529, 0.0823529, 0.596078)

[node name="Label" type="Label" parent="UI/BattleLog"]
offset_left = 13.0
offset_right = 225.0
offset_bottom = 139.0
text = "test"
label_settings = SubResource("LabelSettings_ebx6x")

[node name="EquipDisplay" parent="UI" instance=ExtResource("8_bvquk")]
position = Vector2(7, 650)

[node name="AmmoDisplay" parent="UI/EquipDisplay" instance=ExtResource("7_rn2j2")]
position = Vector2(-87, 203)
rotation = -3.14159

[node name="PlayerStaminaBar" type="ProgressBar" parent="UI"]
self_modulate = Color(1, 1, 0, 1)
top_level = true
offset_left = 42.0
offset_top = 56.0
offset_right = 469.0
offset_bottom = 61.0
show_percentage = false
script = ExtResource("4_ycv06")

[node name="Label" type="Label" parent="UI/PlayerStaminaBar"]
layout_mode = 0
offset_left = -2.0
offset_top = -18.0
offset_right = 101.0
offset_bottom = 8.0
text = "stamina/max"

[node name="Lightning" type="Sprite2D" parent="UI/PlayerStaminaBar"]
position = Vector2(-20, 3)
scale = Vector2(0.0793963, 0.0793963)
texture = ExtResource("5_b7ogi")

[node name="PlayerHpBar" type="ProgressBar" parent="UI"]
self_modulate = Color(0.996078, 0.0235294, 1, 1)
offset_left = 41.0
offset_top = 22.0
offset_right = 469.0
offset_bottom = 31.0
show_percentage = false
script = ExtResource("10_t4aif")

[node name="HeartBlur" type="Sprite2D" parent="UI/PlayerHpBar"]
position = Vector2(-19, 1)
scale = Vector2(0.0555556, 0.0555556)
texture = ExtResource("11_f71mg")

[node name="Label" type="Label" parent="UI/PlayerHpBar"]
layout_mode = 0
offset_left = 2.0
offset_top = -24.0
offset_right = 42.0
offset_bottom = -1.0
text = "hp/max
"

[node name="ReloadingProgressBar" type="ProgressBar" parent="UI"]
self_modulate = Color(0.964706, 0, 0, 1)
top_level = true
anchors_preset = -1
anchor_left = -0.0208333
anchor_top = -0.00617284
anchor_right = -0.0208333
offset_left = 164.0
offset_top = 633.0
offset_right = 314.0
offset_bottom = 637.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false
script = ExtResource("9_je6p7")

[node name="Label" type="Label" parent="UI/ReloadingProgressBar"]
layout_mode = 0
offset_left = 9.0
offset_top = -28.0
offset_right = 99.0
offset_bottom = -2.0
text = "Reloading..."
label_settings = SubResource("LabelSettings_d1v2q")
justification_flags = 162

[node name="FullScreenDisplay" type="Node2D" parent="UI"]
visible = false
script = ExtResource("12_mw385")

[node name="Label" type="Label" parent="UI/FullScreenDisplay"]
offset_left = 298.0
offset_top = 222.0
offset_right = 842.0
offset_bottom = 351.0
text = "ここにテキストを表示
"
label_settings = SubResource("LabelSettings_6nrgp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="UI/FullScreenDisplay"]

[node name="EnemyCount" type="Label" parent="UI"]
offset_left = 546.0
offset_top = 14.0
offset_right = 629.0
offset_bottom = 40.0
text = "EnemyLeft"

[node name="DmgDisplay" type="Node2D" parent="."]
script = ExtResource("14_psugj")

[node name="ParallaxLayer" parent="." instance=ExtResource("15_o3xry")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.525, 0.525)

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fvyma")

[node name="Follow" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(-1902, 380)
rotation = 0.0111841

[connection signal="button_up" from="UI/Button" to="." method="_on_button_button_up"]
